SET(HEADER_PATH ${proLandOceanTry_SOURCE_DIR}/OceanLighting )
SET(PROJECTNAME OceanLighting)

INCLUDE_DIRECTORIES(
   ${HEADER_PATH}
   ${anttweakbar_INCLUDE_DIR}
)

# Adds headers to the "Header Files" group in visual studio
SOURCE_GROUP( "Header Files" ${HEADER_PATH}/*.h )

ADD_EXECUTABLE(
  ${PROJECTNAME}
  Program.cpp
  Main.cpp
)
target_link_libraries(
    ${PROJECTNAME} 
	
	${anttweakbar_LIBRARY}
	
	${glew_LIBRARY}
	${GLUT_LIBRARY}
)
INSTALL(
  TARGETS ${PROJECTNAME}
  LIBRARY DESTINATION ${EXECUTABLE_OUTPUT_PATH}
  RUNTIME DESTINATION ${EXECUTABLE_OUTPUT_PATH}
  ARCHIVE DESTINATION ${EXECUTABLE_OUTPUT_PATH}
  PUBLIC_HEADER DESTINATION ${EXECUTABLE_OUTPUT_PATH}
)






